# spectree

./: CLAUDE.md  LICENSE  README.md  README.spec.md
python/: README.md  pyproject.toml
python/src/spectree/: cli.py  core.py
python/tests/: test_core.py
